# rust-2048

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js
public/: style.css  tailwind.config.js
public/static/: darktheme.js
scripts/: build-desktop.sh  build-web.sh
src/: main.rs
src/components/: Cargo.toml  board.rs  cell.rs  logic.rs  mod.rs
src/components/src/: board.rs  cell.rs  mod.rs
src/desktop/: Cargo.toml
src/desktop/src/: main.rs
src/pages/: game.rs
src/utils/: logic.rs  types.rs
src/web/: Cargo.toml
src/web/src/: main.rs
