[workspace]
members = ["src/desktop", "src/web", "src/components"]

# [package]
# name = "rust-2048"
# version = "0.0.1"

# [dependencies]
# dioxus = "0.3.2"
# dioxus-web = "0.3.2"
# rand = "0.8.5"
# getrandom = { version = "0.2", features = ["js"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-logger = "0.2.0"
# console_error_panic_hook = "0.1.7"


# [target.'cfg(target_arch = "x86")'.dependencies]
# dioxus-desktop = "0.3.0"
